@@ -1,7 +1,8 @@
 v0.7.0 RELEASE
 ==========
+[Dock]: Fix issue with overlay not being drawn on top of windows.
+[Dock]: Assertion when docking multiple windows.
 [Dock]: Support allowing tab windows. All windows of the tab should be docked. The tab options should be altered by Dock.
-[Dock]: Options to enable/disable certain docks.
 [Dock]: Documentation.
 [Tab]: Push focused window to front of title list if not visible.
 [Tab]: Documentation.
